argoCD/service-uptimekuma.yaml
apiVersion: v1
kind: Service
metadata:
  name: uptime-kuma-service
  namespace: rielu-site2
spec:
  type: ExternalName
  externalName: uptime-kuma-service.uptime-kuma.svc.cluster.local # 別名前空間のフルFQDN
