argoCD/ingress-uptimekuma.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: rielu-site2-kuma-ingress
  namespace: rielu-site2
  annotations:
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  ingressClassName: nginx
  rules:
    - host: rielu.uniproject.jp
      http:
        paths:
          - path: /api-kuma(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: uptime-kuma-service
                port:
                  number: 80 # KumaのServiceポートに合わせる
